# diversity_by_design

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analyses/: common.py
analyses/eda/: eda.py
analyses/modeling_metrics/: GEARS_norman19.py  GEARS_replogle.py  GEARS_replogle22.py  gears_icml.py  get_gears_results_norman_single_double_split.py  modeling.get_model_results.ipynb  modeling.get_model_results.norman19.ipynb  modeling_norman19.ipynb  modeling_replogle22.ipynb  plotting.ipynb  plotting.py  plotting_backup.py
analyses/real_data_simulations/: aggregate_metrics.py  simulation.py
analyses/sensitivity_to_niche_signals/: sensitivity_analysis.py
analyses/simulations/: filtered_simulation_plots.py  paper_plots.py  parameter_estimation.py  random_sweep.py  simulation_plots.py
analyses/simulations/filtered_sweep_results_plots/: filter_info.txt
analyses/synthetic_simulations/: paper_plots.py  parameter_estimation.py  random_sweep.py
data/norman19/: README.md  get_data.py
data/replogle22/: README.md  get_data.py
